Fixed project card overlap on dash

--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ body{
     width: 50px;
     height: 10px;
     margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 .about__container p{
